08-ingress/ingress-nginx.yaml
  apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: nginx
    name: nginx
    namespace: dialog
  spec:
    rules:
      - host: nginx.dialog.com
        http:
          paths:
            - backend:
                serviceName: nginx
                servicePort: 80
              path: /
    # This section is only required if TLS is to be enabled for the Ingress
    # tls:
    #     - hosts:
    #         - www.example.com
    #       secretName: example-tls
